# 230-web

./: Makefile  README.md  assignments.markdown  grades.markdown  index.markdown  lectures.markdown  links.markdown  stack.yaml  ucsd-cse-two-thirty.cabal
css/: default.css  syntax.css
final/: KMeans.lhs  MapReduce.lhs
homeworks/: Final.lhs  Hw1.lhs  Hw2.lhs  Hw3.lhs  soe-instructions-macos-10.6.lhs  soe-instructions-ubuntu-12.04.lhs  soe-instructions.lhs
homeworks/.liquid/: Hw2.lhs.cst.html  Hw2.lhs.json  Hw2.lhs.markdown  Hw2.lhs.out  flycheck_Hw1.lhs.html  flycheck_Hw1.lhs.json  flycheck_Hw1.lhs.markdown  flycheck_Hw1.lhs.out
lectures/: lec-animation.lhs  lec-errors.lhs  lec-higher-order-1.lhs  lec-higher-order-2.lhs  lec-inference.lhs  lec-monads.lhs  lec-monads2.lhs  lec-parsers.lhs  lec-quickcheck.lhs  lec-reactive.lhs  lec-stm.lhs  lec-transformers.lhs  lec-typeclasses.lhs  swizzle-v0.lhs  swizzle-v1.lhs  swizzle-v2.lhs  today.lhs
slides/: Makefile  lec-animation.lhs  lec-higher-order.lhs  lec-intro.lhs  lec-parallel.lhs  lec-polymorphism.lhs  slides.css
src/: Site.hs
static/: abs.imp  fact.imp  foo.hi  foo.hs  groups.txt  hello.hs  hw1.tar.gz.old  lec-intro.hs  lec-intro.lhs  lec-lambda.pptx  lec-stm-lecture.hs  lec-stm.hs  lec-stm.pptx  soe-test.hs  test.imp  times.imp
static/.liquid/: flycheck_foo.hs.cst.html  flycheck_foo.hs.err  flycheck_foo.hs.fq  flycheck_foo.hs.json  flycheck_foo.hs.out  flycheck_lec-intro.hs.cst.html  flycheck_lec-intro.hs.err  flycheck_lec-intro.hs.fq  flycheck_lec-intro.hs.fqout  (+14 more)
templates/: default.html  foo.markdown
