name:                ucsd-cse-two-thirty
version:             0.1.0.0
synopsis:            Home page for CSE 230 at UC San Diego 
-- description:
homepage:            https://github.com/ucsd-pl/cse130
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
copyright:           Ranjit Jhala
category:            Web
build-type:          Simple
extra-source-files:  README.markdown
cabal-version:       >=1.10

executable homepage 
  main-is:             Site.hs
  -- build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base,
                       hakyll
